# flywire-tools

./: .gitattributes  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
binder/: Dockerfile
docs/: startup.ipynb
src/flywire_tools/: __init__.py  connectome.py
